scaffold de router y endpoints básicos

--- a/package.json
+++ b/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "workout-tracker-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -16,5 +6,26 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
-  }
+  },
+  "name": "workout-tracker-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Isabel-C-Acevedo-G/workout-tracker-api.git.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/Isabel-C-Acevedo-G/workout-tracker-api.git/issues"
+  },
+  "homepage": "https://github.com/Isabel-C-Acevedo-G/workout-tracker-api.git#readme"
 }
